# gvss24_graphics

./: CMakeLists.txt  README.md
basic_rendering/: CMakeLists.txt  basic_example.cpp  depth_testing1.cpp  fs.sh  shaders.cpp  transformations.cpp  vs.sh
examples/: algebra.cpp  depth_testing.cpp  e1.cpp  e2.cpp  raytracing.cpp  shaders.cpp  transformations.cpp  using_shaders.cpp
raytracing/: CMakeLists.txt  basic_image.cpp  basic_tools.cpp  raytracing.cpp  sphere.cpp  sphere_anti_aliasing.cpp  sphere_raytracing.cpp
resources/: cuboid.txt
src/: a1.hpp  api.hpp  box.hpp  color.h  cone.hpp  cylinder.hpp  helpers.hpp  hw.cpp  hw.hpp  plane.hpp  sphere.hpp  utility_functions.hpp  vec3.h
